--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,6 @@
 {
   "files.associations": {
     "fstream": "cpp",
-    "iostream": "cpp",
-    "iosfwd": "cpp",
-    "ostream": "cpp"
+    "iostream": "cpp"
   }
 }
